[package]
name = "athena"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for making requests
reqwest = { version = "0.12.5", features = ["json", "blocking"] }

# Serde for serialization and deserialization of JSON
serde = { version = "1.0.208", features = ["derive"] }

# Tokio for asynchronous programming
tokio = { version = "1.33", features = ["full"] }

# Serde JSON for working with JSON data
serde_json = "1.0"

# Optional: Log crate for logging (if needed)
log = "0.4"
env_logger = "0.10"  # Optional, for logging setup